[package]
name = "aipn"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Enumeration of all Assigned Internet Protocol Numbers as per IANA."
repository = "https://github.com/starkbamse/aipn-rust"
keywords = ["network", "protocol", "ip"]
categories = ["network-programming"]

[dependencies]
num_enum = "0.7.3"
serde = { version = "1.0.217", default-features = false, features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0.134"
